# aja

./: .gitignore  CMakeLists.txt  README.md  README_dhira.txt  README_tantra.md  build.sbt
android/: ReadMe.md
android/myappforScala/: AndroidManifest.xml  _build.sbt  build.xml  local.properties
c_c++/: CMakeLists.txt
c_c++/example/ann/: README.md  backpropagation_feedforward_network.cpp  bp.cpp  hopfield_network.cpp
c_c++/example/design_patterns/: adapter_pattern  factory  factory.cpp
c_c++/example/fuzzy/: CMakeLists.txt  README.md
c_c++/include/: README.md
c_c++/src/fuzzy/: CMakeLists.txt  README.md
c_c++/src/sensor/: README.md
c_c++/test/: README.md
cmake/: README.md  aja_config.h.in
data/: .url.txt.swo  README.md  download_datasets.py  names.csv  people.json  profiledata_06-May-2005  ticker.tsv  tweet.json  url.txt  wget.py
data/bible/: README.md
data/ebay/: sfpd.csv
data/hw_wordcount_output/: .part-00000.crc  .part-00001.crc  part-00000  part-00001
data/northwind/: README.md
data/titanic/: README.txt
dhira/: README.txt  build.sbt
docs/: README.txt  aja.dvi  aja.lof  aja.lot  aja.tex
docs/hadoop/: hadoop_ml.tex
docs/latex_tutorial/: aja_template.tex  latex_tutorials.tex  latex_tutorials.tex~
docs/ml_basics/: ml_algorithms.tex  ml_terms.tex  naive_bayes.tex
docs/r_code/: matrix.R  system_of_equations.R  vector.R
docs/tex/: HadoopSetup.md  big_data.tex  mathematics.tex  ml.tex  nnets.tex  spark.tex
example/: CMakeLists.txt  README.md
example/algorithms/: CMakeLists.txt  insertion_sort.cpp
example/ann/: CMakeLists.txt  backpropagation_feedforward_network.cpp  hopfield_network.cpp  perceptron_network.cpp
example/ann/java/backpropagation/: Demo.html  SquarePattern.java
example/design_patterns/: CMakeLists.txt  adapter_pattern.cpp  singleton_pattern  singleton_pattern.cpp
example/fuzzy/: CMakeLists.txt  example_fuzzifier.cpp  fuzzifier.cpp
example/scala/: README.txt  actors.scala  anonmyous_functions.scala  array_script.scala  cake_pattern.scala  classes.scala  factorial.scala  fibonabci.scala  function_as_object.scala  hello_world.scala  hello_world_script.scala  java_vs_scala.scala  list_tuple_script.scala  partial1.scala  sqrt.scala  templates.scala  traits.scala  uncurry.scala  values.scala  with_java_data_calss.scala
examples/scala/: HelloExample.scala
project/: Build.scala  plugins.sbt
python/: README.md
python/bootlogs/: ParseZygoteLogs.py
python/nse/: nse_stock_exchange.py
python/process_doc/: extract_text_from_docx.py  run.sh
r/: README.md  hello_neural_network.R
scala/: build.sbt
scala/dhira/: README.txt  build.sbt
scala/example/: case_classes.scala  function_compose.scala  monoids.scala  triat.scala
scala/tantra/: README.md  build.sbt
scala/tej/: README.md  build.sbt
scripts/: maven_install.sh  openjdk_install.sh  sbt_install.sh  scala_install.sh  sparkshell.sh  sun_java_install.sh
src/: CMakeLists.txt  aja_worksheet.sc
src/ann/: CMakeLists.txt  README.md  input_layer.cpp  network.cpp  network_topology.cpp  neuron.cpp  perceptron.cpp
src/fuzzy/: CMakeLists.txt  CMakeLists.txt~  fuzzifier.cpp
src/utils/: first.xml  tiny_xml.cpp
tej/: README.md  build.sbt
tej/project/: Build.scala
test/: CMakeLists.txt
test/ann/: README.md
test/fuzzy/: CMakeLists.txt  test_fuzzifier.cpp
to_delete/: dhira_build.sbt
to_delete/build-jobhunt-Desktop-Debug/: Makefile  jobhunt
to_delete/jobhunt/: README.md  diamond.cpp  inheritance.cpp  jobhunt.pro
to_delete/spark/: .Sql.scala.swp  Sql.scala
to_delete/tej/: README.md
tools/: README.md  vimrc_reference
tools/OpenCL_Computer_Vision_IDE/: ReadME.txt
wiki/: REAME.md.md  coding_guidelines.txt  linux_commands.txt  markdown.txt  os_macros.txt
(+1362 files in other folders)
